<resources>
    <string name="app_name">eCommerceApp</string>
    <string name="join_now">Join now</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="buy_everything">Buy Everything</string>
    <string name="phone_number">Phone Number...</string>
    <string name="hint_phone_number">Phone number...</string>
    <string name="remember_me">Remember me</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name...</string>
    <string name="user_name">User Name</string>
    <string name="please_enter_your_product_in_here">Please enter your product in here</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_name">Category Name</string>
    <string name="suggestion">Suggestion</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="shipping">Shipping</string>
    <string name="wait_getting">Wait getting</string>
    <string name="wait_excepting">Wait excepting</string>
    <string name="rate">Rate</string>
    <string name="wait_accepting">Wait accepting</string>
    <string name="log_out">Log out</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_activity_maps">Map</string>
    <string name="comment">Comment</string>
</resources>
