<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imgIcon"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:background="@drawable/title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgIcon"
        android:text="@string/buy_everything"
        android:layout_centerHorizontal="true"
        android:textColor="@color/purple"

        android:textSize="@dimen/title"/>
    <Button
        android:id="@+id/btnGetLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custombutton"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <Button
        android:id="@+id/btnGetSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/customstroke"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_above="@id/btnGetLogin"
        android:text="@string/join_now"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="16sp"/>


</RelativeLayout>