<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationFragment">

    <LinearLayout
        android:id="@+id/linearInfoUser"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:background="@drawable/circleimage"/>

        <TextView
            android:id="@+id/txtNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/size_user_name" />


    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cvWait"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/linearInfoUser"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:id="@+id/imgWaitAccept"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/waitaccept" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgWaitAccept"
                    android:layout_centerHorizontal="true"
                    android:text="@string/wait_accepting" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgWaitGetting"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/waitgetting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgWaitGetting"
                    android:layout_centerHorizontal="true"
                    android:text="@string/wait_getting" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <ImageView
                    android:id="@+id/imgShipping"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/shipping" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgShipping"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/shipping" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgRate"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/rate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgRate"
                    android:layout_centerHorizontal="true"
                    android:text="@string/rate" />
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvWait"/>
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp"
        android:background="@drawable/custombutton"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="@dimen/size_name_product" />

</RelativeLayout>